[gd_scene load_steps=2 format=3 uid="uid://brcs06hnkrc38"]

[ext_resource type="Script" uid="uid://de5j50kqsjtrc" path="res://addons/dialogue_editor/main scenes/condition_container.gd" id="1_xflh5"]

[node name="ConditionContainer" type="VBoxContainer"]
theme_override_constants/separation = 1
script = ExtResource("1_xflh5")

[node name="HSeparator2" type="HSeparator" parent="."]
modulate = Color(0.439216, 0.439216, 0.439216, 0.290196)
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CheckBox" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "â–¶"

[node name="HSeparator" type="HSeparator" parent="."]
modulate = Color(0.439216, 0.439216, 0.439216, 0.290196)
layout_mode = 2

[connection signal="toggled" from="HBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
